--- a/index.html
+++ b/index.html
@@ -391,12 +391,15 @@
 <body>
   <h1 class="pageTitle">TLC FSP</h1>
 
-  <nav class="navRow" aria-label="Sayfalar">
     <!-- Bunları kendi yapına göre aynı şekilde güncelle -->
-    <a class="navLink" href="https://protokolfsp.github.io/fsp-audio/">Güncel</a>
-    <a class="navLink" href="https://protokolfsp.github.io/FSP2022-23/">2021–23</a>
-    <a class="navLink" href="https://protokolfsp.github.io/All-in-One/">All-in-One</a>
-  </nav>
+   <nav class="navRow" aria-label="Sayfalar">
+      <a class="navLink" href="https://protokolfsp.github.io/fsp-audio/">Güncel</a>
+      <a class="navLink" href="https://protokolfsp.github.io/FSP2022-23/">2021–23</a>
+      <a class="navLink" href="https://protokolfsp.github.io/All-in-One/">All-in-One</a>
+      <a class="navLink" href="https://protokolfsp.github.io/Tlcfsp/">TLC</a>
+      <a class="navLink" href="https://protokolfsp.github.io/MenschiB/">MenschiB</a>
+
+      </nav>
 
   <div class="topbar">
     <input id="search" type="text" placeholder="Arama..." />
