--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
     // =========================
     // SPEED
     // =========================
-    const SPEEDS = [0.5, 0.75, 0.9, 1, 1.25, 1.5, 1.75];
+    const SPEEDS = [0.5, 0.75, 0.9, 1, 1.25, 1.5, 1.75, 2.0, 2.27];
     let speedIndex = SPEEDS.indexOf(1);
 
     function fmtSpeed(v){
